--- a/chrome/components/one_tabs-bar.css
+++ b/chrome/components/one_tabs-bar.css
@@ -5,6 +5,7 @@
 
 :root[uidensity="touch"] {
     --tab-height-personal: 36px !important;
+    --toolbar-height-personal: 42px !important;
 }
 
 /* "tab_line": "#126e82" */
@@ -71,47 +72,128 @@ toolbar #firefox-view-button[aria-pressed="true"] .toolbarbutton-icon {
     fill: var(--arrowpanel-color, var(--lwt-tab-text)) !important;
 }
 
-/* ---------------------Pestaña activa------------------------ */
+/* Quitar imagen de la interfaz principal */
 
-.tab-stack, .tab-background {
+:root:is([lwtheme-image],[style*="--lwt-additional-images"]) #navigator-toolbox {
+    background-image:  none !important; 
+}
+
+/* ______________________________________________________ Pestaña activa _________________________________________________ */
+
+.tab-stack, .tab-background, .tab-content{
     border-radius: var(--tab-border-radius) !important;
 }
 
-.tab-stack {
-    margin-top: var(--margin-top-personal) !important;
+.tab-stack{
+    --tab-block-margin: 0px !important;
+    margin-block: 8px !important;
 }
 
-.tabbrowser-tab:not([selected="true"]) .tab-content {
-    margin-top: 8px !important;
-}
-
-.tab-content {
-    margin-top: 8px !important;
-    border-radius: 4px !important;
+.tab-content{
     height: var(--tab-height-personal) !important;
+    margin-block: var(--tab-block-margin) !important;
+    border-radius: var(--tab-border-radius) !important;
 }
 
-#tabbrowser-tabs:is([movingtab]) .tabbrowser-tab[selected="true"] .tab-content{
-    background: var(--lwt-selected-tab-background-color) !important;
-}
-
-.tabbrowser-tab[selected="true"] .tab-content {
-    box-shadow: 0px 6px 5px 0px color-mix(in srgb, var(--lwt-tab-text) 14%, transparent) !important;
+/* Sombra en la pestaña activa */
+:root:not([lwtheme-image],[style*="--lwt-additional-images"]) .tabbrowser-tab[selected="true"]:not([multiselected]) .tab-stack {
+    box-shadow: 0px 4px 7px 0px color-mix(in srgb, var(--lwt-frame) 84%, var(--lwt-tab-text)) !important;
     z-index: 1 !important;
 }
 
-/* tab dividers/separators */
+@supports -moz-bool-pref("firefoxone.without-default-colors") {
+    :root:not([lwtheme-image],[style*="--lwt-additional-images"]) .tabbrowser-tab[selected="true"]:not([multiselected]) .tab-stack {
+        box-shadow: none !important;
+    }
+    :root:not([lwtheme-image],[style*="--lwt-additional-images"]) .tabbrowser-tab[selected="true"]:not([multiselected]) .tab-content{
+        outline: 1px solid var(--identity-tab-color, var(--button-active-bgcolor)) !important;
+        outline-offset: -1px !important;
+    }
+}
 
-.tabbrowser-tab[selected] .tab-content{
+/* Imagen en pestaña */
+
+:root:not([chromehidden~="toolbar"]):is([lwtheme-image],[style*="--lwt-additional-images"]) tab[selected] .tab-background{
+    background: var(--toolbar-bgcolor) !important;
+}
+
+:root:not([chromehidden~="toolbar"]):is([lwtheme-image],[style*="--lwt-additional-images"]) tab[selected] .tab-stack{
+    background-image: linear-gradient(transparent, transparent),
+                      linear-gradient(var(--toolbar-bgcolor), var(--toolbar-bgcolor)), 
+                      var(--lwt-header-image, var(--lwt-additional-images, none)) !important;
+    background-position: center center !important;
+    background-repeat:  no-repeat !important;
+    background-size:  var(--display-theme-with-images) !important; 
+    outline: 1px solid var(--identity-tab-color, var(--general-color)) !important;
+    outline-offset: -1px !important;
+    z-index: 1 !important;
+}
+
+/* Colores al mover una pestaña */
+
+#tabbrowser-tabs:is([movingtab]) .tabbrowser-tab[selected="true"] .tab-content{
+    background-color: var(--lwt-selected-tab-background-color) !important;
+}
+
+:root:not([chromehidden~="toolbar"]):is([lwtheme-image],[style*="--lwt-additional-images"]) 
+    #tabbrowser-tabs:is([movingtab]) .tabbrowser-tab[selected="true"] .tab-content{
+    outline: 1px solid var(--general-color) !important;
+    outline-offset: -1px !important;
+}
+
+/* Mantener una imagen al mover pestaña en temas con imagenes */
+
+:root:is([lwtheme-image], [style*="--lwt-additional-images"]) 
+    #tabbrowser-tabs:is([movingtab]) > #tabbrowser-arrowscrollbox > .tabbrowser-tab > .tab-stack > .tab-content[selected="true"]{
+    background-image: linear-gradient(var(--toolbar-bgcolor, transparent), var(--toolbar-bgcolor, transparent)), 
+                      linear-gradient(var(--toolbar-bgcolor, transparent), var(--toolbar-bgcolor, transparent)), 
+                      var(--lwt-header-image, var(--lwt-additional-images, none)) !important;
+    background-position: center center !important;
+    background-repeat: no-repeat !important;
+    background-size: auto auto !important;
+}
+
+/* Multiselected tabs */
+
+.tabbrowser-tab[multiselected]:is([selected]) :is(.tab-stack, .tab-content, .tab-background){
+    background-image: none !important;
+    background-color: var(--button-bgcolor-personal) !important;
+    --tab-border-radius: 0px !important;
+    outline-color: var(--general-color) !important;
+}
+
+.tabbrowser-tab[multiselected]:not([selected]) .tab-content{
+    background-image: none !important;
+    background-color: var(--button-bgcolor) !important;
+    --tab-border-radius: 0px !important;
+    outline: none !important;
+    border: none !important;
+    box-shadow: none !important;
+}
+
+.tabbrowser-tab[multiselected]:not([selected]) .tab-background{
+    outline: none !important;
+    border-radius: 0px !important;
+}
+
+/* separadores entre pestañas */
+
+.tabbrowser-tab[selected] .tab-stack{
     outline: 1px solid var(--lwt-selected-tab-background-color) !important;
     outline-offset: -1px !important;
 }
 
 .tabbrowser-tab:not(.tabbrowser-tab>stack[selected] + .tabbrowser-tab>stack>.tab-background) .tab-background:after{
     border-left: 1px solid color-mix(in srgb, currentColor 30%, transparent);
-    height: 16px;
+    height: calc(var(--tab-height-personal) + var(--tab-block-margin) / 2) !important;
+    border-image: 0 1 linear-gradient(
+    transparent 20%,
+    color-mix(in srgb, currentColor 20%, transparent) 20%,
+    color-mix(in srgb, currentColor 20%, transparent) 80%,
+    transparent 80%
+  ) !important;
     position:absolute;
-    margin-block-start: 6px !important;
+    
 }
 .tab-background:after{
     content:"";
@@ -145,25 +227,9 @@ toolbar #firefox-view-button[aria-pressed="true"] .toolbarbutton-icon {
 
 /* Color :hover de las pestañas no seleccionadas */
 
-.tabbrowser-tab:not([selected="true"], [multiselected]):hover > .tab-stack > .tab-background:not([selected="true"], [multiselected]) {
-    background-color: color-mix(in srgb, var(--lwt-tab-text) 12%, var(--lwt-frame)) !important;
-}
-
-/* Regla para visualizar mejor el seleccionar varias pestañas */
-
-@supports not -moz-bool-pref("userChrome.tab.bottom_rounded_corner") {
-    .tab-background[multiselected]:not([selected="true"]), tab-background:is([multiselected]):not([selected="true"]) .tab-stack {
-        margin-inline: 0px 0px !important;
-        background: var(--button-hover-bgcolor) !important;
-        outline: none !important;
-        margin-block: 0px !important;
-    }
-}
-
-@supports not -moz-bool-pref("userChrome.tab.bottom_rounded_corner") {
-    .tab-background[multiselected][selected="true"] hbox {
-        background: var(--general-color) !important;
-    }
+.tabbrowser-tab:not([selected="true"], [multiselected]):hover > .tab-stack:not([selected="true"], [multiselected]) {
+    background-color: color-mix(in srgb, var(--lwt-tab-text) 4%, var(--lwt-frame)) !important;
+    z-index: 1 !important;
 }
 
 /* Botón "Open Newtab" */
@@ -194,7 +260,7 @@ toolbar #firefox-view-button[aria-pressed="true"] .toolbarbutton-icon {
 
 .tab-icon-image[src="chrome://branding/content/icon32.png"] {
     content: url("../images/foxlogofavicon.svg");
-    fill: var(--identity-icon-color, var(--lwt-tab-text)) !important;
+    fill: var(--lwt-tab-text) !important;
 }
 
 tab:not([selected]) .tab-icon-image {
@@ -240,7 +306,7 @@ tab:not([selected]) .tab-icon-image {
 /* Tamaño horizontal pestañas */
 
 .tabbrowser-tab[fadein]:not([style^="max-width"]) {
-    max-width: 170px !important;
+    max-width: 168px !important;
 }
 
 /* Reduce spacing between pinned and regular tabs */
@@ -272,24 +338,15 @@ tab:not([selected]) .tab-icon-image {
     background-position: center top calc(0px + var(--tabs-navbar-shadow-size)) !important;
 }
 
-/* ----------------------------------- config to themes that have "IMAGES" --------------------------------------------
-   ------------------------------------------ Compatibilidad parcial -------------------------------------------------- */
+/* Code to tabs-bar reach lower height that 30px */
 
-:root:not([chromehidden~="toolbar"]):is([lwtheme-image],[style*="--lwt-additional-images"]) tab[selected] .tab-content{
-    background-image: linear-gradient(var(--toolbar-bgcolor, transparent), var(--toolbar-bgcolor, transparent)),
-                      linear-gradient(var(--toolbar-bgcolor), var(--toolbar-bgcolor)), 
-                      var(--lwt-header-image, var(--lwt-additional-images, none)) !important;
-    background-position: center center !important;
-    background-repeat:  no-repeat !important;
-    background-size:  var(--display-theme-with-images) !important; 
-    outline: 1px solid var(--button-hover-bgcolor) !important;
-    outline-offset: -1px !important;
-    box-shadow: none !important;
+#titlebar{ appearance: none !important; }
+
+.titlebar-buttonbox-container, .tab-close-button, .tab-label-container{
+  max-height: calc(var(--tab-height-personal) + var(--tab-block-margin) + 6px) !important;
 }
 
-:root:is([lwtheme-image],[style*="--lwt-additional-images"]) #navigator-toolbox {
-    background-image:  none !important; 
-}
+/* _______________________ Nav-bar and Bookmark-bar - Compatibilidad con temas que usan imágenes ________________________ */
 
 :root:not([chromehidden~="toolbar"]):is([style*="--lwt-additional-images"],[lwtheme-image]) #nav-bar{
     background-image: linear-gradient(var(--toolbar-bgcolor, transparent), var(--toolbar-bgcolor, transparent)),
@@ -315,26 +372,11 @@ tab:not([selected]) .tab-icon-image {
     outline-offset: -1px !important;
 }
 
-/* Mantener una imagen al mover pestaña en temas con imagenes - still needs fix */
+/* ################################################## Menu-bar sin Tree-tab style ######################################################*/
 
-:root:is([lwtheme-image], [style*="--lwt-additional-images"]) #tabbrowser-tabs:is([movingtab]) > #tabbrowser-arrowscrollbox > .tabbrowser-tab > .tab-stack > .tab-content[selected="true"]{
-    background-image: linear-gradient(var(--toolbar-bgcolor, transparent), var(--toolbar-bgcolor, transparent)), 
-                      linear-gradient(var(--toolbar-bgcolor, transparent), var(--toolbar-bgcolor, transparent)), 
-                      var(--lwt-header-image, var(--lwt-additional-images, none)) !important;
-    background-position: left center !important;
-    background-repeat: no-repeat !important;
-    background-size: auto auto !important;
-}
+@supports not -moz-bool-pref("firefoxone.tree_tabs_style") {
 
-/* Code to tabs-bar reach lower height that 30px */
-
-#titlebar{ appearance: none !important; }
-
-.titlebar-buttonbox-container, .tab-close-button, .tab-label-container{
-  max-height: calc(var(--tab-height-personal) + var(--tab-block-margin) + 6px) !important;
-}
-
-/* ############################################ Menubar ############################################### */
+/* ________________________________________________________ Menubar ______________________________________________________ */
 
 :root:not([customizing]) #titlebar{
   -moz-box-orient: horizontal; /* Fx <112 compatibility */
@@ -354,7 +396,20 @@ tab:not([selected]) .tab-icon-image {
   visibility: visible !important;
 }
 
-/* ------------ Menubar Flotante ---------------- */
+#TabsToolbar > .titlebar-spacer[type="post-tabs"]{
+  display: flex !important;
+}
+
+/* __ Menubar Flotante __ */
+    
+@supports -moz-bool-pref("firefoxone.without-default-colors") {    
+    #toolbar-menubar{ --toolbar-bgcolor: color-mix(in srgb, var(--lwt-frame) 88%, color-mix(in srgb, var(--lwt-tab-text) 88%, var(--general-color)) ) !important;}
+    }
+    
+    :root:is([style*="--lwt-additional-images"],[lwtheme-image]) #main-menubar,
+    :root:is([style*="--lwt-additional-images"],[lwtheme-image]) #menubar-items::after{
+        --toolbar-bgcolor: color-mix(in srgb, var(--lwt-frame) 88%, color-mix(in srgb,var(--lwt-tab-text) 70%, var(--general-color)) ) !important; 
+    }
 
 #toolbar-menubar[autohide="true"]{
   position: fixed;
@@ -372,10 +427,15 @@ tab:not([selected]) .tab-icon-image {
 
 #main-menubar{
   height: calc(var(--tab-min-height) +  1 * var(--tab-block-margin,0px) + 6px);
-  background-color: var(--toolbar-bgcolor) !important;
+  background-image: linear-gradient(transparent, transparent),
+                      linear-gradient(var(--toolbar-bgcolor), var(--toolbar-bgcolor)), 
+                      var(--lwt-header-image, var(--lwt-additional-images, none)) !important;
+    background-position: center center !important;
+    background-repeat:  no-repeat !important;
+    background-size:  var(--display-theme-with-images) !important;
   color: var(--arrowpanel-color);
-  border-radius: var(--toolbarbutton-border-radius) 0px 0px var(--toolbarbutton-border-radius) !important;
-  box-shadow: inset 0 4px var(--lwt-frame) !important;
+  border-radius: 8px 0px 0px 8px !important;
+  box-shadow: inset 0 4px var(--lwt-frame),inset 0 4px var(--lwt-frame),inset 0 4px var(--lwt-frame) !important;
 }
 
 #menubar-items{
@@ -393,15 +453,47 @@ tab:not([selected]) .tab-icon-image {
 
 @media (-moz-gtk-csd-reversed-placement){
   #toolbar-menubar[autohide="true"]:not([inactive]) > .titlebar-buttonbox-container{ display: none }  
+}}
+
+/* __ Menu trick round border __*/
+
+/* Barra de menú */
+
+#main-menubar>menu {
+    text-shadow: none !important;
+    border-radius: calc(var(--toolbarbutton-border-radius) + 6px) !important;
+    background-color: transparent !important;
 }
+
+#main-menubar>menu label{
+    margin-bottom: -1px !important;
+}
+
+#main-menubar>menu:is(:hover, [open]){
+    background-color: var(--button-active-bgcolor) !important;
+}
+
+#toolbar-menubar {
+    padding-inline-start: calc(var(--padding-left-tab) + 9px) !important;
+    height: -moz-available !important;
+    }
+
+#toolbar-menubar>toolbaritem>menubar>menu {
+    border: 6px solid transparent !important;
+    background-clip: padding-box !important;
+    box-shadow: inset 0 4px var(--toolbar-bgcolor), inset 0 1px var(--toolbar-bgcolor), /* Necesario muchas sombras para quitar bug de borde */
+                inset 0 1px var(--toolbar-bgcolor), inset 0 1px var(--toolbar-bgcolor), 
+                inset 0 1px var(--toolbar-bgcolor) !important;
+    }
+
+:root:not([chromehidden~="toolbar"]) #toolbar-menubar[autohide="false"]+#TabsToolbar {
+    padding-inline-start: 4px !important;
+    }
 
 /* ------------------------ config to MacOS ---------------------------
    ------------- partial compatibility to window Controls ----------*/
 
 @media (-moz-platform: macos) {
-    #TabsToolbar {
-        padding-block-start: 6px !important;
-    }
     :root:not([sizemode="fullscreen"]) #tabbrowser-tabs {
         padding-inline-start: 10px !important;
     }
