--- a/chrome/components/one_contextual-menu.css
+++ b/chrome/components/one_contextual-menu.css
@@ -83,8 +83,8 @@ menupopup > menuitem:not([disabled="true"]), menupopup > menu {
 
 menupopup > menuitem:not([disabled="true"]):hover, menupopup > menu:hover {
     appearance: none !important;
-    background: linear-gradient(to right, var(--general-color), var(--general-color)) !important;
-    color: #e9e3ff !important;
+    background: linear-gradient(to right, var(--button-active-bgcolor), var(--button-active-bgcolor)) !important;
+    color: white !important;
 }
 
 menupopup > menuitem:is([disabled="true"]):hover {
@@ -101,7 +101,7 @@ menupopup > menuitem:not([selected="true"]), menupopup > menu {
 
 menupopup > menu[open="true"] {
     appearance: none !important;
-    background: var(--general-color) !important;
+    background: var(--button-active-bgcolor) !important;
     color: #ffffff !important;
 }
 
@@ -109,7 +109,7 @@ menupopup > menu[open="true"] {
 
 menupopup > menuitem:is([selected="true"]):not([disabled="false"]) {
     appearance: none !important;
-    background-color: var(--button-active-bgcolor) !important;
+    background-color: var(--button-hover-bgcolor) !important;
     color: #ffffff !important;
 }
 
@@ -138,7 +138,7 @@ menupopup > menuitem:is([selected="true"]):hover:not([disabled="false"]) {
 }
 
 #context-navigation > menuitem[_moz-menuactive="true"]:not([disabled]) {
-    background: var(--general-color) !important;
+    background: var(--button-active-bgcolor) !important;
     color: #e9e3ff !important;
 }
 
