--- a/chrome/components/one_menu.css
+++ b/chrome/components/one_menu.css
@@ -1,9 +1,9 @@
 /* Source file made available under Mozilla Public License v. 2.0 See the main repository for updates as well as full license text. 
-   https://github.com/Godiesc/firefox-one */
+   https://github.com/Godiesc/firefox-gx */
 
-@media (-moz-platform: windows) , (-moz-platform: linux) {
+@media (-moz-platform: windows), (-moz-platform: linux) {
     :root {
-        --label-color: color-mix(in srgb, var(--arrowpanel-color, var(--lwt-tab-text))85%, var(--Button-background-personal));
+        --label-color: color-mix(in srgb, var(--arrowpanel-color, var(--lwt-tab-text))80%, var(--Button-background-personal));
         --margin-left-icons-personal: 9px !important;
     }
 
@@ -14,8 +14,7 @@
     :root:not([chromehidden~="toolbar"]) #PanelUI-button {
         position: fixed;
         display: flex;
-        top: var(--tab-block-margin) !important;
-        left: 4px !important;
+        top: var(--windowed-top-padding, 0px);
         z-index: 2 !important;
     }
     
@@ -30,27 +29,24 @@
     
 /* Ocultar botón menú en modo "pantalla completa" */
     
-    :root:is([chromehidden~="toolbar"], [sizemode="fullscreen"])>body>#browser, :root:is([chromehidden~="toolbar"], [sizemode="fullscreen"])>body>#browser-bottombox,
+    :root:is([chromehidden~="toolbar"], [sizemode="fullscreen"])>body>#browser, 
+    :root:is([chromehidden~="toolbar"], [sizemode="fullscreen"])>body>#browser-bottombox,
     :root:is([chromehidden~="toolbar"], [sizemode="fullscreen"])>body>#customization-container {
         z-index: 3 !important;
     }
     
-/* margen izquierda pestañas */
+/* margen izquierda pestañas*/
     
     :root:not([chromehidden~="toolbar"]) #toolbar-menubar, :root:not([chromehidden~="toolbar"]) #toolbar-menubar[autohide="true"]+#TabsToolbar {
-        padding-inline-start: calc(var(--padding-left-tab) + 9px) !important;
-    }
-    
-    :root:not([chromehidden~="toolbar"]) #toolbar-menubar[autohide="false"]+#TabsToolbar {
-        padding-inline-start: 4px !important;
+        padding-inline-start: calc(var(--padding-left-tab) + 8px) !important;
     }
     
 /* tamaño botón Menú */
     
     :root:not([chromehidden~="toolbar"]) #PanelUI-menu-button {
         padding: var(--margin-top-personal) 0 0 0 !important;
-        max-height: calc(var(--tab-height-personal)) !important;
-        min-height: calc(var(--tab-height-personal)) !important;
+        max-height: calc(var(--tab-height-personal) + var(--tab-block-margin) * 2) !important;
+        min-height: calc(var(--tab-height-personal) + var(--tab-block-margin) * 2) !important;
     }
     
 /* menu :hover y open */
@@ -62,45 +58,35 @@
     
     :root:not([chromehidden~="toolbar"]) #PanelUI-menu-button:not([open]):hover>.toolbarbutton-badge-stack {
         background-color: var(--toolbarbutton-hover-personal) !important;
-        border-radius: var(--toolbarbutton-border-radius) !important;
+        border-radius: 4px !important;
     }
     
     :root:not([chromehidden~="toolbar"]) #PanelUI-menu-button[open]>.toolbarbutton-badge-stack {
-        --toolbar-bgcolor: var(--arrowpanel-border-color) !important;
         background-image: var(--noise-urlbar-personal) !important;
         background-color: var(--arrowpanel-background, #50505090) !important;
-        border-radius: 0px !important;
-        border-left: 1px solid transparent !important;
+        border: 1px solid transparent !important;
         border-color: var(--arrowpanel-border-color) !important;
         width: 28.5em !important;
-    }
-    :root:not([chromehidden~="toolbar"]):is([sizemode="normal"]) #PanelUI-menu-button[open]>.toolbarbutton-badge-stack {
-        border-radius: 8px !important;
     }
 
 /* Logo */
     
     :root:not([chromehidden~="toolbar"]) #PanelUI-menu-button .toolbarbutton-badge-stack {
         list-style-image: url("chrome://branding/content/icon32.png") !important;
+        display: -moz-box !important;
         max-height: var(--tab-height-personal) !important;
-        min-width: calc(var(--padding-left-tab) + 0px) !important;
-        max-width: calc(var(--padding-left-tab) + 0px) !important;
+        min-width: var(--padding-left-tab) !important;
+        max-width: var(--padding-left-tab) !important;
         -moz-box-pack: center !important;
-        -moz-context-properties: fill !important;
-        fill: #ff1b2d !important;
-    }
-    
-    :root:not([chromehidden~="toolbar"]) #PanelUI-menu-button:not(:hover,[active],[open]) image {
-        filter: drop-shadow(0 0 0.90rem black) !important;
+        fill: var(--general-color) !important;
+        border: 1px solid transparent !important;
     }
     
     :root:not([chromehidden~="toolbar"]) #PanelUI-menu-button image {
+        margin-top: -1px !important;
         min-height: 18px !important;
         min-width: 18px !important;
-    }
-    
-    :root:not([chromehidden~="toolbar"],[sizemode="fullscreen"])[sizemode="maximized"] #PanelUI-menu-button[open] image {
-        margin-inline: 3px !important;
+        margin-inline-start: 2px !important;
     }
     
 /* Label Menú */
@@ -110,29 +96,19 @@
         align-items: center !important;
     }
     
-    :root:not([chromehidden~="toolbar"]):is([sizemode="maximized"]) #PanelUI-menu-button[open]>stack::after {
+    :root:not([chromehidden~="toolbar"]) #PanelUI-menu-button>stack::after {
+        display: -moz-box;
         content: var(--menu-label);
-        background-image: var(--noise-urlbar-personal) !important;
-        background-color: var(--arrowpanel-background) !important;
-        min-width: 50px !important;
-        min-height: 18px !important;
-        max-height: 18px !important;
         color: var(--label-color) !important;
-        padding-inline-start: 1px !important;
-        padding-block: 5px !important;
+        margin-inline-start: 5px !important;
         text-shadow: none !important;
         animation: none !important;
-        box-shadow: -1px 0 0 1px var(--arrowpanel-background) !important;
-    }
-    
-    :root:is([sizemode="maximized"]) #appMenu-popup {
-        --padding-left-tab: 78px !important;
     }
     
 /* Padding top para hacer espacio para la fila del Label menú */
     
     :root:not([chromehidden~="toolbar"])[sizemode="maximized"] #appMenu-popup>panelmultiview>box>box>panelview {
-        padding-top: calc(-1px + var(--tab-height-personal)) !important;
+        padding-top: calc(var(--tab-height-personal)) !important;
     }
     
 /* Margin top para subir el menú [open] */
@@ -141,7 +117,7 @@
         appearance: none !important;
         margin-top: calc(-6px - var(--tab-height-personal)) !important;
         padding-inline-start: 4px !important;
-        clip-path: polygon(0% 0%, 0% 100%, 1% 53%, 0 10px, var(--padding-left-tab) 6px,
+        clip-path: polygon(0% 0%, 0% 100%, 1% 53%, 0 10px, var(--padding-left-tab) 10px,
                var(--padding-left-tab) calc(var(--tab-height-personal) + 2px), 0 calc(var(--tab-height-personal) + 2px), 0 100%, 100% 100%, 100% 0%);
         --arrowpanel-menuitem-padding: 6px !important;
         --arrowpanel-border-radius: 8px !important;
@@ -151,6 +127,12 @@
     :root:is([sizemode="maximized"]):not([tabsintitlebar], [chromehidden~="toolbar"]) #appMenu-popup {
         margin-top: calc(-1px - var(--tab-height-personal) + var(--tab-block-margin)) !important;
     }
+    
+/* zoom icons */
+    
+#appMenu-zoomReduce-button2 > .toolbarbutton-icon, #appMenu-zoomEnlarge-button2 > .toolbarbutton-icon{
+    margin-inline: -4px !important;
+}
     
 /* Separadores */
     
@@ -212,7 +194,7 @@
     
 /* -> Margen de los íconos <- */
     
-    .subviewbutton:is(#appMenu-popup toolbarbutton):not(.subviewbutton-back) {
+.subviewbutton:is(#appMenu-popup toolbarbutton):not(.subviewbutton-back) {
         padding-inline-start: var(--margin-left-icons-personal) !important;
     }
     .subviewbutton:not(.subviewbutton-iconic, .toolbarbutton-text, [checked="true"])>.toolbarbutton-icon, .syncNowBtn {
@@ -223,20 +205,13 @@
     
 /* Margen item -tamaño- */
     
-    :root[sizemode="maximized"] panelmultiview .toolbaritem-combined-buttons>label {
-        margin-inline-start: calc(var(--margin-left-icons-personal) + 17px) !important;
-    }
-    panelmultiview .toolbaritem-combined-buttons>label {
-        margin-inline-start: calc(var(--margin-left-icons-personal) + 15px) !important;
-    }
+#appMenu-zoom-controls{
+    padding-inline-start: calc(var(--margin-left-icons-personal) - 0px) !important;
+}
     
 /* ------------------------ícono account----------------------- */
     
-    #appMenu-fxa-status2:not([fxastatus])>#appMenu-fxa-label2 {
-        margin-inline-end: 1px !important;
-    }
-    
-/* Linea gradiente sobre label Account solo en ventana maximizada */
+/* Linea sobre label Account solo en ventana maximizada */
     
     :root:not([chromehidden~="toolbar"])[sizemode="maximized"] #appMenu-fxa-status2 {
         border-top: 1px solid var(--panel-separator-color) !important;
@@ -244,55 +219,18 @@
         padding-top: 2px !important;
     }
     
-/* Alinear item account en ventana no maximizada */
-    
-    :root:is([sizemode="normal"], [sizemode="fullscreen"]) #appMenu-fxa-label2 {
-        margin-inline-start: 0px !important;
-    }
-    
-/* Label account - first */    
-    /*Margen izquierda */
-    
-    #appMenu-fxa-label2 label {
-        padding-inline-start: calc(var(--margin-left-icons-personal) + 13px) !important;
-    }
-    #fxa-manage-account-button label {
-        padding-inline-start: calc(var(--margin-left-icons-personal) + 14px) !important;
-        margin-inline-start: calc(var(--margin-left-icons-personal) - 24px) !important;
-    }
+/* Label account - first */
 
     /* Ícono sign-in, cuenta no iniciada  */
     
-    #appMenu-fxa-status2:not([fxastatus="signedin"]) {
-        margin-inline-end: -1px !important;
+    :root:not([chromehidden~="toolbar"]) #appMenu-fxa-status2:not([fxastatus="signedin"]) {
         margin-inline-start: calc(var(--margin-left-icons-personal) + 17px) !important;
+        padding-top: 4px !important;
+        border-image: linear-gradient(to left, var(--panel-separator-color), var(--panel-separator-color) 98%, transparent 98%) 1 !important;
     }
-    #appMenu-fxa-status2:not([fxastatus="signedin"]):hover toolbarbutton {
+    :root:not([chromehidden~="toolbar"]) #appMenu-fxa-status2:not([fxastatus="signedin"]):hover toolbarbutton {
         background-color: var(--button-active-bgcolor) !important;
     }
-    
-/* Alinear lista de pestañas sincronizadas */
-    
-    .PanelUI-remotetabs-clientcontainer label {
-        padding-inline-start: 0px !important;
-    }
-    
-/* ------------------Posición de items del lado derecho del menú---------------------*/
-    
-    #appMenu-new-tab-button2, #appMenuRecentlyClosedTabs, #sidebar-switcher-tabs, #appMenu-new-window-button2, 
-    #appMenuRecentlyClosedWindows, #appMenu-new-private-window-button2, #appMenu-downloads-button, 
-    #appMenu-library-downloads-button, #appMenu-extensions-themes-button, #appMenu-print-button2,
-    #appMenu-save-file-button2, #appMenu-find-button2, #panelMenu_searchBookmarks, #appMenu-quit-button2 {
-        padding-inline-end: 25px !important;
-    }
-    
-    /*Ícono SincronizarAhora*/
-    
-    .syncNowBtn {
-        visibility: visible !important;
-        order: 0 !important;
-    }
-}
 
 /* Menú más pequeño en linux*/
 
@@ -304,3 +242,4 @@
         --arrowpanel-menuitem-padding: 5px !important;
     }
 }
+
