--- a/chrome/components/one_root-personal.css
+++ b/chrome/components/one_root-personal.css
@@ -17,23 +17,24 @@
 
 @media (prefers-color-scheme: dark){ :root{
   --lwt-main-image:  url("../images/newtab/wallpaper-dark.png") !important;                  /* new-tab page image - dark theme */ 
-  --lwt-private-image:  url("../images/newtab/private-dark.png") !important;                 /* new-tab private-page image - dark theme */}}
+  --lwt-private-image:  url("../images/newtab/private-dark.png") !important;                 /* new-tab private-page image - dark theme */ }}
   
 @media (prefers-color-scheme: light){ :root{
   --lwt-main-image:  url("../images/newtab/wallpaper-light.png") !important;                 /* new-tab page image - white theme*/
-  --lwt-private-image:  url("../images/newtab/private-light.png") !important;                /* new-tab private-page image - white theme*/}}
+  --lwt-private-image:  url("../images/newtab/private-light.png") !important;                /* new-tab private-page image - white theme*/ }}
 
 :root[privatebrowsingmode="temporary"]{ --general-color: var(--purple) !important; }         /* Accent color private mode */
   
 :root{  
   --wallpaper-size: cover;                                                                   /* cover-> default ; auto auto -> to not adapted image */
-  --display-theme-with-images: auto;                                                        /* auto-> defautl ; cover -> themes with 2 or more images*/
+  --display-theme-with-images: auto;                                                         /* auto-> defautl ; cover -> themes with 2 or more images*/
   
   --tab-height-personal: 28px ;                                                              /* Tamaño altura de pestañas */
   --toolbar-height-personal: 38px ;                                                          /* Toolbar height */
   
   --menu-label: "Menu" ;                                                                     /* Label botón -Menú- */
-  --padding-left-tab: 30px ;                                                                 /* Tamaño horizontal botón -Menú- */
+  --padding-left-tab: 74px ;                                                                 /* Tamaño horizontal botón -Menú- */
+  --my-vertical-toolbar-width: 48px ;                                                        /* Tamaño horizontal left-sidebar */
   
   --left-color: var(--general-color);                                                        /* Color left logo y wordmark */
   --right-color: #0060bfdd ;                                                                 /* Color right logo y wordmark */
