--- a/chrome/components/one_windows-controls.css
+++ b/chrome/components/one_windows-controls.css
@@ -7,6 +7,7 @@
 
     .titlebar-button{
         background-color: transparent !important;
+        padding-block-start: 10px !important;
         padding-inline: 4px !important;
     }
     
@@ -24,17 +25,12 @@
     .titlebar-button:hover .toolbarbutton-icon{
         background-color:  var(--lwt-selected-tab-background-color) !important;
         border-radius: var(--tab-border-radius) !important;
+        border-radius: 5px !important;
     }
-    
-    /* Min button */
-    
-    .titlebar-button.titlebar-min .toolbarbutton-icon{
-        padding-block: calc(var(--tab-height-personal) / 2 - 3px) 6px !important;
-        padding-inline: 9px !important;
-    }
-    
+
     /* maximizar-restore-close buttons */
     
+    .titlebar-button.titlebar-min .toolbarbutton-icon,
     .titlebar-button.titlebar-restore .toolbarbutton-icon, 
     .titlebar-button.titlebar-max .toolbarbutton-icon,
     .titlebar-button.titlebar-close .toolbarbutton-icon{
@@ -58,7 +54,7 @@
         color: white !important;
     }
     .titlebar-close {
-        list-style-image: url(chrome://browser/skin/window-controls/close.svg) !important
+        list-style-image: url(chrome://browser/skin/window-controls/close.svg) !important;
     }
     .titlebar-min {
         list-style-image: url(chrome://browser/skin/window-controls/minimize.svg) !important
