--- a/chrome/components/one_tricks.css
+++ b/chrome/components/one_tricks.css
@@ -1,18 +1,3 @@
-/* Tree-tabs without left-sidebar 
+/* Source file made available under Mozilla Public License v. 2.0 See the main repository for updates as well as full license text. 
+   https://github.com/Godiesc/firefox-one */
 
-@supports -moz-bool-pref("firefoxone.tree_tabs_style_without_leftsidebar") {
-
-:root:not([chromehidden~="toolbar"]) #PanelUI-button { left: 10px !important; }
-
-:root:not([chromehidden~="toolbar"])[sizemode="maximized"] #PanelUI-menu-button[open] { margin-inline-start: -6px !important; }
-
-:root:not([chromehidden~="toolbar"]) #PanelUI-menu-button { min-height: calc(var(--toolbar-height-personal) + var(--tab-block-margin) ) !important; }
-:root:is([inFullscreen]) #PanelUI-menu-button { min-height: calc(var(--toolbar-height-personal) + 0px ) !important; } 
-
-:root:not([chromehidden~="toolbar"]) #PersonalToolbar { margin-top: initial !important; }
-
-:root:not([chromehidden~="toolbar"]) #nav-bar-customization-target > :is(toolbarbutton, toolbaritem):first-child,
-:root:not([chromehidden~="toolbar"]) toolbar[customizing] .customization-target{
-    margin-inline-start: calc(var(--padding-left-tab) + 4px) !important;
-}
-}*/
